Fix system notification extra padding issue (#5432)

--- a/server/webapp/WEB-INF/rails/app/assets/new_stylesheets/shared/_notifications.scss
+++ b/server/webapp/WEB-INF/rails/app/assets/new_stylesheets/shared/_notifications.scss
@@ -33,7 +33,7 @@
     position:           relative;
     background:         #fff;
     color:              #000;
-    padding:            20px 20px 10px;
+    padding:            5px 20px 10px;
     border-radius:      5px;
     width:              300px;
     box-sizing:         border-box;
