--- a/server/webapp/WEB-INF/rails/webpack/views/components/notification_center/system_notifications.scss
+++ b/server/webapp/WEB-INF/rails/webpack/views/components/notification_center/system_notifications.scss
@@ -48,7 +48,7 @@ $icon-background: #e0dede;
   position:      relative;
   background:    $notification-bg;
   color:         $text-color;
-  padding:       20px 20px 10px;
+  padding:       5px 20px 10px;
   border-radius: 5px;
   box-sizing:    border-box;
   font-size:     13px;
